--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>GameBoyAdvance Online</title>
+        <title>Butter's GameBoyAdvance Online</title>
         <meta charset="UTF-8">
     </head>
     <body>
